components/pagination/style/index.less
@import "../../style/themes/default";
@import "../../style/mixins/index";
@import "../../input/style/mixin";

@pagination-prefix-cls: ~"@{ant-prefix}-pagination";

.@{pagination-prefix-cls} {
  .reset-component;

  ul,
  ol {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  &:after {
    content: " ";
    display: block;
    height: 0;
    clear: both;
    overflow: hidden;
    visibility: hidden;
  }

  &-total-text {
    color: rgba(0, 0, 0, 0.66);
    display: inline-block;
    vertical-align: middle;
    height: @pagination-item-size;
    line-height: @pagination-item-size - 2px;
    margin-right: 24px;
  }

  &-item {
    cursor: pointer;
    border-radius: @border-radius-base;
    user-select: none;
    min-width: @pagination-item-size;
    height: @pagination-item-size;
    line-height: @pagination-item-size - 2px;
    text-align: center;
    list-style: none;
    display: inline-block;
    vertical-align: middle;
    background-color: @component-background;
    margin-right: 8px;
    font-family: @pagination-font-family;
    outline: 0;

    a {
      text-decoration: none;
      color: @text-color;
      transition: none;
      margin: 0 6px;
    }

    &:focus,
    &:hover {
      transition: all .3s;
      border-color: @primary-color;
      a {
        color: @primary-color;
      }
    }

    &-active {
      border-color: @primary-color;
      font-weight: @pagination-font-weight-active;

      a {
        color: @primary-color;
      }

      &:focus,
      &:hover {
        border-color: @primary-5;
      }

      &:focus a,
      &:hover a {
        color: @primary-5;
      }
    }
  }

  &-first,
  &-last,
  &-prev,
  &-jump-prev,
  &-jump-next {
    margin-right: 8px;
  }

  &-first,
  &-last,
  &-prev,
  &-next,
  &-jump-prev,
  &-jump-next {
    font-family: @pagination-font-family;
    cursor: pointer;
    color: @text-color;
    border-radius: @border-radius-base;
    list-style: none;
    min-width: @pagination-item-size;
    height: @pagination-item-size;
    line-height: @pagination-item-size;
    text-align: center;
    transition: all .3s;
    display: inline-block;
    vertical-align: middle;
  }

  &-first,
  &-last,
  &-prev,
  &-next {
    outline: 0;

    a {
      color: @text-color;
      user-select: none;
    }

    &:hover a {
      border-color: @primary-5;
    }

    .@{pagination-prefix-cls}-item-link {
      .iconfont-mixin(24px);
      background-color: @component-background;
      outline: none;
      display: block;
      transition: all .3s;

      &:before {
        display: block;
        height: @pagination-item-size - 2px;
        line-height: @pagination-item-size;
        text-align: center;
        font-weight: 500;
      }
    }

    &:focus .@{pagination-prefix-cls}-item-link,
    &:hover .@{pagination-prefix-cls}-item-link {
      border-color: @primary-color;
      color: @primary-color;
    }
  }

  &-first {
    .@{pagination-prefix-cls}-item-link:before {
      content: "\e5dc";
      display: block;
    }
  }

  &-last {
    .@{pagination-prefix-cls}-item-link:before {
      content: "\e5dd";
      display: block;
    }
  }

  &-prev {
    .@{pagination-prefix-cls}-item-link:before {
      content: "\e314";
      display: block;
    }
  }

  &-next {
    .@{pagination-prefix-cls}-item-link:before {
      content: "\e315";
      display: block;
    }
  }

  &-disabled {
    &,
    &:hover,
    &:focus {
      cursor: not-allowed;
      a,
      .@{pagination-prefix-cls}-item-link {
        border-color: @border-color-base;
        color: @disabled-color;
        cursor: not-allowed;
      }
    }
    .@{ant-prefix}-btn[disabled] {
      background-color: transparent;
    }
  }

  &-slash {
    margin: 0 10px 0 5px;
  }

  &-options {
    display: inline-block;
    vertical-align: middle;
    margin-left: 16px;

    &-size-changer.@{ant-prefix}-select {
      display: inline-block;
      line-height: 20px;
      width: auto;
      vertical-align: text-bottom;

      .@{ant-prefix}-select-selection {
        padding-top: 0;
        text-align: right;
        height: auto;
        min-width: 64px;
        &__rendered {
          display: block;
        }

        &-selected-value {
          display: inline-block;
          vertical-align: middle;
        }

        .@{ant-prefix}-select-arrow {
          display: inline-block;
          vertical-align: inherit;
        }
      }
      .@{ant-prefix}-select-underline {
        display: none;
      }
    }

    &-quick-jumper {
      display: inline-block;
      vertical-align: middle;
      height: @input-height-base;
      line-height: @input-height-base;

      input {
        .input;
        margin: 0 8px;
        width: 50px;
      }
    }

    &-label {
      color: rgba(0, 0, 0, 0.66);
      letter-spacing: .01em;
      line-height: 20px;
      margin-right: 4px;
    }
  }

  &-simple &-prev,
  &-simple &-next {
    height: @pagination-item-size-sm;
    line-height: @pagination-item-size-sm;
    vertical-align: top;
    .@{pagination-prefix-cls}-item-link {
      border: 0;
      height: @pagination-item-size-sm;
      &:before {
        height: @pagination-item-size-sm;
        line-height: @pagination-item-size-sm;
      }
    }
  }

  &-simple &-simple-pager {
    display: inline-block;
    margin-right: 8px;
    height: @pagination-item-size-sm;

    input {
      margin-right: 8px;
      box-sizing: border-box;
      background-color: @component-background;
      border-radius: @border-radius-base;
      border: @border-width-base @border-style-base @border-color-base;
      outline: none;
      padding: 0 6px;
      height: 100%;
      text-align: center;
      transition: border-color .3s;

      &:hover {
        border-color: @primary-color;
      }
    }
  }

  &-tiny {
    .@{pagination-prefix-cls}-options {
      margin-right: 16px;
    }
  }

  &-small &-total-text,
  &-small &-simple-pager {
    height: @pagination-item-size-sm;
    line-height: @pagination-item-size-sm;
  }

  &-small &-item {
    margin: 0;
    min-width: @pagination-item-size-sm;
    height: @pagination-item-size-sm;
    line-height: @pagination-item-size-sm - 2px;
  }

  &-small &-item:not(&-item-active) {
    background: transparent;
    border-color: transparent;
  }

  &-small &-first,
  &-small &-last,
  &-small &-prev,
  &-small &-next {
    margin: 0;
    min-width: @pagination-item-size-sm;
    height: @pagination-item-size-sm;
    line-height: @pagination-item-size-sm;
  }

  &-small &-first &-item-link,
  &-small &-last &-item-link,
  &-small &-prev &-item-link,
  &-small &-next &-item-link {
    border-color: transparent;
    background: transparent;
    &:before {
      height: @pagination-item-size-sm;
      line-height: @pagination-item-size-sm;
    }
  }

  &-small &-jump-prev,
  &-small &-jump-next {
    height: @pagination-item-size-sm;
    line-height: @pagination-item-size-sm;
    margin-right: 0;
  }

  &-small &-options {
    &-quick-jumper {
      height: @pagination-item-size-sm;
      line-height: @pagination-item-size-sm;

      input {
        .input-sm;
        width: 44px;
      }
    }
  }

  &-large &-total-text,
  &-large &-simple-pager {
    height: @pagination-item-size-lg;
    line-height: @pagination-item-size-lg;
  }

  &-large &-item {
    margin: 0;
    min-width: @pagination-item-size-lg;
    height: @pagination-item-size-lg;
    line-height: @pagination-item-size-lg - 2px;
  }

  &-large &-item:not(&-item-active) {
    background: transparent;
    border-color: transparent;
  }

  &-large &-first,
  &-large &-last,
  &-large &-prev,
  &-large &-next {
    margin: 0;
    min-width: @pagination-item-size-lg;
    height: @pagination-item-size-lg;
    line-height: @pagination-item-size-lg;
  }

  &-large &-first &-item-link,
  &-large &-last &-item-link,
  &-large &-prev &-item-link,
  &-large &-next &-item-link {
    border-color: transparent;
    background: transparent;
    &:before {
      height: @pagination-item-size-lg;
      line-height: @pagination-item-size-lg;
    }
  }

  &-large &-jump-prev,
  &-large &-jump-next {
    height: @pagination-item-size-lg;
    line-height: @pagination-item-size-lg;
    margin-right: 0;
  }

  &-large &-options {
    &-quick-jumper {
      height: @pagination-item-size-lg;
      line-height: @pagination-item-size-lg;

      input {
        .input-sm;
        width: 44px;
      }
    }
  }
}

@media only screen and (max-width: @screen-lg) {
  .@{pagination-prefix-cls}-item {
    &-after-jump-prev,
    &-before-jump-next {
      display: none;
    }
  }
}

@media only screen and (max-width: @screen-sm) {
  .@{pagination-prefix-cls}-options {
    display: none;
  }
}

